--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </nav>
   <div class="container">
       <div class="row pcontainer">
-          <div class="col-md"> BEING NUBANK MEANS HAVING A SIMPLIFIED FINANCIAL LIFE. <br>
+          <div class="col-md"> BEING NUBANK MEANS <br> HAVING A SIMPLIFIED <br> FINANCIAL LIFE. <br>
                 NuConta gives you better returns than a savings account and our credit card is annuity-free.
           </div>
           <div class="col-md"> 
