--- a/index.html
+++ b/index.html
@@ -12,11 +12,29 @@
      <style>
   .pcontainer{
    background-image: url(imagenes/woman-bus@3x.jpg);
-   height: 100%;
+   height: 606px;
    width: 100% ;
    background-size: cover;
-   padding: 80px;
+   padding: 40px;
 }   
+.celular{
+   margin-left: 200px;
+   margin-top: 100px;
+}  
+.title_header{
+  front-size: 48px;
+  color:#fff;
+  width: 473px;
+}  
+.title_header_1{
+  front-size: 18px;
+  display: block;
+  margin-top: 30px;
+  width: 287px;
+}  
+.btn_custom_1{
+  background-color:argb(138,5,190);
+}  
      </style>
   </head>
   <body>
@@ -49,10 +67,15 @@
   </nav>
   <div class="container">
       <div class="row pcontainer">
-          <div class="col-md"> BEING NUBANK MEANS <br> HAVING A SIMPLIFIED <br> FINANCIAL LIFE. <br>
-                NuConta gives you better returns than a savings account and our credit card is annuity-free.
+          <div class="col-md">
+            <span> class="title_header"> BEING NUBANK MEANS <br> HAVING A SIMPLIFIED <br> FINANCIAL LIFE.
+            </span>
+            <span> class="title_header_1">
+            NuConta gives you better returns <br> than a savings account and our <br> credit card is annuity-free.
+            </span>
           </div>
           <div class="col-md"> 
+            <img src="imagenes/home_products@3x.png" width="400" class="celular">
           </div>
           <div></div>
       </div>
