--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
    margin-top: 100px;
 }  
 .title_header{
-  front-size: 48px;
+  font-size: 48px;
   color:#fff;
   width: 473px;
 }  
 .title_header_1{
-  front-size: 18px;
+  font-size: 18px;
   display: block;
   margin-top: 30px;
   width: 287px;
@@ -68,10 +68,10 @@
   <div class="container">
       <div class="row pcontainer">
           <div class="col-md">
-            <span> class="title_header"> BEING NUBANK MEANS <br> HAVING A SIMPLIFIED <br> FINANCIAL LIFE.
+            <span class="title_header"> Being Nubank means having a simplified financial life.
             </span>
-            <span> class="title_header_1">
-            NuConta gives you better returns <br> than a savings account and our <br> credit card is annuity-free.
+            <span class="title_header_1">
+            NuConta gives you better returns than a savings account and our credit card is annuity-free.
             </span>
           </div>
           <div class="col-md"> 
