--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title></title>
      <style>
   .pcontainer{
-   background-image: url(imagenes/woman-bus@3x.jpg);
+   background-image: url(Imagenes/woman-bus@3x.jpg);
    height: 606px;
    width: 100% ;
    background-size: cover;
@@ -75,11 +75,11 @@
             </span>
           </div>
           <div class="col-md"> 
-            <img src="imagenes/home_products@3x.png" width="400" class="celular">
+            <img src="Imagenes/home_products@3x.png" width="400" class="celular">
           </div>
           <div></div>
       </div>
       
-      
+
   </div>
 </html>
